dongle-smartcontract/test_results_v14.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
error[E0432]: unresolved import `crate::types::ReviewData`
  --> src\lib.rs:26:76
   |
26 | use crate::types::{FeeConfig, Project, ProjectStats, Review, ReviewAction, ReviewData, ReviewEventData, VerificationRecord,
   |                                                                            ^^^^^^^^^^ no `ReviewData` in `types`

error[E0433]: failed to resolve: use of undeclared type `VerificationRegistry`
   --> src\lib.rs:102:9
    |
102 |         VerificationRegistry::request_verification(&env, project_id, requester, evidence_cid)
    |         ^^^^^^^^^^^^^^^^^^^^ use of undeclared type `VerificationRegistry`
    |
help: a struct with a similar name exists
    |
102 -         VerificationRegistry::request_verification(&env, project_id, requester, evidence_cid)
102 +         VerificationRecord::request_verification(&env, project_id, requester, evidence_cid)
    |
help: consider importing this struct
    |
 22 + use crate::verification_registry::VerificationRegistry;
    |

error[E0433]: failed to resolve: use of undeclared type `VerificationRegistry`
   --> src\lib.rs:106:9
    |
106 |         VerificationRegistry::approve_verification(&env, project_id, admin)
    |         ^^^^^^^^^^^^^^^^^^^^ use of undeclared type `VerificationRegistry`
    |
help: a struct with a similar name exists
    |
106 -         VerificationRegistry::approve_verification(&env, project_id, admin)
106 +         VerificationRecord::approve_verification(&env, project_id, admin)
    |
help: consider importing this struct
    |
 22 + use crate::verification_registry::VerificationRegistry;
    |

error[E0433]: failed to resolve: use of undeclared type `VerificationRegistry`
   --> src\lib.rs:110:9
    |
110 |         VerificationRegistry::reject_verification(&env, project_id, admin)
    |         ^^^^^^^^^^^^^^^^^^^^ use of undeclared type `VerificationRegistry`
    |
help: a struct with a similar name exists
    |
110 -         VerificationRegistry::reject_verification(&env, project_id, admin)
110 +         VerificationRecord::reject_verification(&env, project_id, admin)
    |
help: consider importing this struct
    |
 22 + use crate::verification_registry::VerificationRegistry;
    |

error[E0433]: failed to resolve: use of undeclared type `VerificationRegistry`
   --> src\lib.rs:114:9
    |
114 |         VerificationRegistry::get_verification(&env, project_id).ok()
    |         ^^^^^^^^^^^^^^^^^^^^ use of undeclared type `VerificationRegistry`
    |
help: a struct with a similar name exists
    |
114 -         VerificationRegistry::get_verification(&env, project_id).ok()
114 +         VerificationRecord::get_verification(&env, project_id).ok()
    |
help: consider importing this struct
    |
 22 + use crate::verification_registry::VerificationRegistry;
    |

warning: unused import: `Vec`
 --> src\types.rs:1:50
  |
1 | use soroban_sdk::{Address, String, contracttype, Vec};
  |                                                  ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ProjectStats`, `ReviewAction`, `ReviewEventData`, and `VerificationStatus`
  --> src\lib.rs:26:40
   |
26 | use crate::types::{FeeConfig, Project, ProjectStats, Review, ReviewAction, ReviewData, ReviewEventData, VerificationRecord,
   |                                        ^^^^^^^^^^^^          ^^^^^^^^^^^^              ^^^^^^^^^^^^^^^
27 |     VerificationStatus, ProjectRegistrationParams, ProjectUpdateParams
   |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:3:5
  |
3 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::types::VerificationStatus`
 --> src\test.rs:4:5
  |
4 | use crate::types::VerificationStatus;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:8:58
  |
8 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
warning: `dongle-contract` (lib) generated 2 warnings
error: could not compile `dongle-contract` (lib) due to 5 previous errors; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `dongle-contract` (lib test) generated 5 warnings (2 duplicates)
error: could not compile `dongle-contract` (lib test) due to 5 previous errors; 5 warnings emitted
